# bitgettrading

./: .env.bak  .gitignore  24x7_MONITORING_GUIDE.md  ACTUAL_FILLED_SIZE_FIX.md  AGENTS.md  BACKTESTER_GUIDE.md  BACKTESTING_INSTRUCTIONS.md  BACKTEST_PLAN.md  BACKTEST_SUMMARY.md  BITGET_NATIVE_TP_SL.md  BOT_RUNNING_STATUS.md  BOT_SIDE_TPSL_FIX.md  COMPREHENSIVE_STRATEGY_REPORT.md  CRITICAL_ISSUES_BLOCKING_BOT.md  CRITICAL_ISSUES_FOUND.md  CRITICAL_SSL_ISSUE.md  EMERGENCY_FIX_APPLIED.md  EQUITY_CALCULATION_FIX.md  EXCHANGE_SIDE_ONLY_EXPLANATION.md  EXCHANGE_TRAILING_TP_IMPLEMENTATION.md  EXTREME_ROI_STRATEGIES.md  FAST_SCANNING_STRATEGY.md  FEE_OPTIMIZATION.md  FILTERED_BACKTEST_RESULTS.md  FINAL_BACKTEST_REPORT.md  FINAL_ML_SUMMARY.md  FINAL_ULTIMATE_SUMMARY.md  HOLY_GRAIL_COMPLETE_ANALYSIS.md  HOLY_GRAIL_METHODOLOGY.md  HOLY_GRAIL_STRATEGIES.md  HOLY_GRAIL_STRATEGY_COMPARISON.md  HOW_TO_USE_BACKTESTER.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENT_SUGGESTIONS.md  INSTITUTIONAL_STRATEGY_SUMMARY.md  LEVERAGE_AWARE_TP_SL_FIX.md  LEVERAGE_CONSISTENCY_FIX.md  (+153 more)
backtest_data/: 0GUSDT_1m_30d.pkl  1000000MOGUSDT_1m_30d.pkl  1000BONKUSDT_1m_30d.pkl  1000BONKUSDT_5m_180d.pkl  1000CATUSDT_1m_30d.pkl  1000RATSUSDT_1m_30d.pkl  1000SATSUSDT_1H_30d.pkl  1000SATSUSDT_1m_30d.pkl  1000XECUSDT_5m_180d.pkl  1INCHUSDT_1m_30d.pkl  1INCHUSDT_5m_180d.pkl  1MBABYDOGEUSDT_1m_30d.pkl  4USDT_1m_30d.pkl  A2ZUSDT_1m_30d.pkl  AAVEUSDT_1H_30d.pkl  AAVEUSDT_1m_30d.pkl  AAVEUSDT_5m_180d.pkl  ACHUSDT_1m_30d.pkl  ACHUSDT_5m_180d.pkl  ACTUSDT_1m_30d.pkl  ADAUSDT_1H_30d.pkl  ADAUSDT_1m_30d.pkl  ADAUSDT_5m_180d.pkl  AEROUSDT_1m_30d.pkl  AEVOUSDT_1m_30d.pkl  AGIUSDT_5m_180d.pkl  AGLDUSDT_5m_180d.pkl  AIAUSDT_1m_30d.pkl  AIUSDT_1m_30d.pkl  AIXBTUSDT_1m_30d.pkl  AKTUSDT_1m_30d.pkl  ALCHUSDT_1m_30d.pkl  ALCHUSDT_5m_180d.pkl  ALGOUSDT_1H_30d.pkl  ALGOUSDT_1m_30d.pkl  ALGOUSDT_5m_180d.pkl  ALICEUSDT_1m_30d.pkl  ALICEUSDT_5m_180d.pkl  ANKRUSDT_5m_180d.pkl  APEUSDT_1m_30d.pkl  (+503 more)
docs/: BITGET_PLACE_TPSL_ORDER.md
models/: feature_importance_v1_20251108_034822.json  feature_importance_v1_20251108_034848.json  feature_importance_v1_20251108_161028.json  feature_importance_v1_20251108_161041.json  lgbm_model.txt  lgbm_model_features.txt  lightgbm_v1_20251108_034822.txt  lightgbm_v1_20251108_161028_features.txt  lightgbm_v1_20251108_161041_features.txt  lightgbm_v1_latest.txt  model_metadata_v1_20251108_034848.json  model_metadata_v1_20251108_161028.json  model_metadata_v1_20251108_161041.json
strategies/: STRATEGY_RATIONALES.md  ULTIMATE_STRATEGY_RATIONALES.md  strategies_summary.json  strategy_001.json  strategy_002.json  strategy_003.json  strategy_004.json  strategy_005.json  strategy_006.json  strategy_007.json  strategy_008.json  strategy_009.json  strategy_010.json  strategy_011.json  strategy_012.json  strategy_013.json  strategy_014.json  strategy_015.json  strategy_016.json  strategy_017.json  strategy_018.json  strategy_019.json  strategy_020.json  strategy_021.json  strategy_022.json  strategy_023.json  strategy_024.json  strategy_025.json  strategy_026.json  strategy_027.json  strategy_028.json  strategy_029.json  strategy_030.json  strategy_031.json  strategy_032.json  strategy_033.json  strategy_034.json  strategy_035.json  strategy_036.json  strategy_037.json  (+142 more)
strategy_reports/: STRATEGY_REPORT_LightGBM_Adaptive_Thresholds_20251108.md  STRATEGY_REPORT_LightGBM_strategy045_20251108.md  (+13 more)
(+53 files in other folders)
