[tool.poetry]
name = "bitget-trading"
version = "0.1.0"
description = "SOLUSDT perpetual futures trading bot with CNN-LSTM-GRU model (50x leverage)"
authors = ["timtim-hub"]
readme = "README.md"
packages = [{include = "bitget_trading", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
ccxt = "^4.2.0"
pandas = "^2.2.0"
numpy = "^2.2.0"
torch = "^2.2.0"
pandas-ta = ">=0.3.14"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
ruff = "^0.2.0"
black = "^24.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
hypothesis = "^6.98.0"

[tool.poetry.group.test.dependencies]
pytest-timeout = "^2.2.0"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "T20", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src/bitget_trading --cov-report=html --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

